--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "app.js",
   "dependencies": {
     "express": "^4.12.3",
-    "raspirobot": "^1.0.0"
+    "raspirobot": "^1.0.0",
+    "socket.io": "^1.3.5"
   },
   "devDependencies": {},
   "scripts": {
