--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "",
   "main": "app.js",
   "dependencies": {
+    "body-parser": "^1.12.3",
+    "ejs": "^2.3.1",
     "express": "^4.12.3",
     "raspirobot": "^1.0.0",
     "socket.io": "^1.3.5"
