--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "ejs": "^2.3.1",
     "express": "^4.12.3",
     "raspirobot": "^1.0.0",
+    "say": "^0.6.0",
     "socket.io": "^1.3.5"
   },
   "devDependencies": {},
