--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "body-parser": "^1.12.3",
     "ejs": "^2.3.1",
     "express": "^4.12.3",
+    "play": "^0.5.0",
     "raspirobot": "^1.0.0",
     "say": "^0.6.0",
     "socket.io": "^1.3.5"
